LP2107141 dark mode :host selector corrections
Corrects dark mode selectors in component stylesheets to ensure that
they are applied to the  host component. Fixes numerous contrast issues
in dark mode, primarily in the MARC rich editor but also in several
other components that had dark mode color overrides.

Release-note: Correct dark mode colors in several components, primarily
the MARC rich editor

Signed-off by: Shula Link <slink@gchrl.org>
Signed-off by: Terran McCanna <tmccanna@georgialibraries.org>

--- a/Open-ILS/src/eg2/src/app/share/grid/grid-toolbar.component.css
+++ b/Open-ILS/src/eg2/src/app/share/grid/grid-toolbar.component.css
@@ -64,8 +64,8 @@
   opacity: 1;
 }
 
-[data-bs-theme="dark"] .eg-grid-toolbar-utilities .btn-outline-dark.disabled,
-[data-bs-theme="dark"] .eg-grid-toolbar-utilities .btn-outline-dark:disabled {
+[data-bs-theme="dark"] :host .eg-grid-toolbar-utilities .btn-outline-dark.disabled,
+[data-bs-theme="dark"] :host .eg-grid-toolbar-utilities .btn-outline-dark:disabled {
   opacity: 1;
 }
 
