--- a/Open-ILS/src/eg2/src/app/staff/catalog/record/record.component.css
+++ b/Open-ILS/src/eg2/src/app/staff/catalog/record/record.component.css
@@ -2,7 +2,7 @@
   background-color: hsla(223, 25%, 91%, 1);
 }
 
-[data-bs-theme="dark"] #marcEditor {
+[data-bs-theme="dark"] :host #marcEditor {
   background-color: var(--bs-body-bg-alt);
 }
 
