--- a/Open-ILS/src/eg2/src/app/staff/catalog/search-form.component.css
+++ b/Open-ILS/src/eg2/src/app/staff/catalog/search-form.component.css
@@ -34,6 +34,6 @@ select.form-control:not([size]):not([multiple]) {
   margin-bottom: 0;
 }
 
-[data-bs-theme="dark"] .btn.btn-light {
+[data-bs-theme="dark"] :host .btn.btn-light {
   border-color: transparent;
 }
