--- a/Open-ILS/src/eg2/src/styles.css
+++ b/Open-ILS/src/eg2/src/styles.css
@@ -1005,7 +1005,7 @@ a {
 .nav-tabs:not(.flex-column) .nav-link:active {
   background-color: var(--bs-body-bg);
   border-color: var(--border) var(--border) var(--bs-body-bg);
-  box-shadow: 0 -0.25rem 0.4rem rgba(0, 0, 0, 0.07);
+  box-shadow: 0 -0.35rem 0.35rem rgba(0, 0, 0, 0.07);
 }
 
 /* Vertical nav tabs */
@@ -1041,7 +1041,7 @@ a {
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg-highlight);
   border: 1px solid var(--btn-gray-border);
-  box-shadow: 0 -0.25rem 0.4rem rgba(var(--box-shadow), 0.65);
+  box-shadow: 0 -0.35rem 0.35rem rgba(var(--box-shadow), 0.65);
 }
 
 [data-bs-theme="dark"] .nav-tabs:not(.flex-column) .nav-link {
